--- a/src/app/receita/receita-search/receita-search.component.html
+++ b/src/app/receita/receita-search/receita-search.component.html
@@ -1,90 +1,42 @@
+
 <div class="container">
   <div class="col-12 custom-page" >
     <p-breadcrumb [model]="items" [home]="home"></p-breadcrumb>
-    <div class="col-8" style="margin-top: 1rem; display: flex; justify-content: center;">
-      <div class="card" style="padding: 2rem;">
-        <div>
-          <p-table #dt [columns]="cols" [value]="receitas" styleClass="p-datatable-gridlines"  [paginator]="true" [rows]="10" responsiveLayout="scroll">
-            <ng-template pTemplate="header" let-columns>
-              <tr>
-                <th *ngFor="let col of columns">
-                  {{ col.header }}
-                </th>
-                <th>
-                  Embalagem
-                </th>
-                <!-- <th style="width: 15%;">
-                  Ações
-                </th> 
-                 -->
-              </tr>
-              <tr>
-                <th *ngFor="let col of columns">
-                  <p-columnFilter type="text" [field]="col.field" [matchModeOptions]="matchModeOptions" [matchMode]="'custom-equals'"></p-columnFilter>
-                </th>
-              </tr>
-            </ng-template>
-            <ng-template pTemplate="body" let-rowData let-columns="columns">
-              <tr [pSelectableRow]="rowData">
-                <td *ngFor="let col of columns">
-                  <ng-container concatData>
-                    {{ rowData[col.field] | json }}
-                  </ng-container>
-
-                 <td style="cursor: pointer;">
-                  <ng-template>
-                    <td *ngFor="let item of receitas;">
-                      <table style="border: 1px solid black; margin-left: 10px; padding: 7px;">
-                        <tr>
-                          <td  style="text-align:center;"><p>{{item}}</p></td>
-                          <td  style="text-align:center ;">{{item}}</td>
-                          <td  style="text-align:center;">{{item.embalagens[0]}}</td>
-                        </tr>
-                      </table>
-                    </td>
-                 </ng-template>
-                </td>
-              </tr>
-            </ng-template>
-          </p-table>
-        </div>
-      </div>
-    </div>
+    <div style="float: right; margin-bottom: 10px;margin-top: 10px;" class="flex align-items-center justify-content-between">
+      <span class="p-input-icon-left">
+        <i class="pi pi-search"></i>
+        <input pInputText type="text" [(ngModel)]="termoPesquisa" placeholder="Buscar medicamentos..." (input)="buscarMedicamentos()" />
+      </span>
   </div>
+   <div style="width: 100%;display: flex;justify-content: center;">
+  <p-table #dt [value]="receitas" [rows]="10" [paginator]="true" 
+       [rows]="5" [showCurrentPageReport]="true"  [rowsPerPageOptions]="rowsPage"
+      currentPageReportTemplate="Mostrando {first} a {last} de {totalRecords} entradas" [showCurrentPageReport]="true">
+      <ng-template pTemplate="header">
+          <tr>  
+              <th  style="min-width:120px">Nome</th>
+              <th style="text-align: center;">Embalagens</th>
+          </tr>
+      </ng-template>
+      <ng-template pTemplate="body" let-receitas>
+          <tr>          
+              <td>{{receitas.produto}}</td>
+              <td>
+                <table>
+                  <tr>
+                    <td [attr.colspan]="receitas.embalagens.length"  style="border: 1px solid #ccc; width: 35px; text-align: center;" *ngFor="let embalagem of receitas.embalagens">{{ embalagem.sigla }}
+                    </td>
+                  </tr>
+                </table>
+              </td>
+          </tr>
+      </ng-template>
+      <ng-template pTemplate="summary">
+          <div class="flex align-items-center justify-content-between">
+              <!-- In total there are {{chamados ? chamados.length : 0 }} products. -->
+          </div>
+      </ng-template>
+  </p-table>
 </div>
 
-
-<!-- <div class="container">
-  <div class="col-12 custom-page" >
-    <p-breadcrumb [model]="items" [home]="home"></p-breadcrumb>
-    <div class="col-8" style="margin-top: 1rem; display: flex; justify-content: center;">
-      <div class="card" style="padding: 2rem;">
-        <p-table [value]="receitas" styleClass="p-datatable-gridlines" [tableStyle]="{ 'min-width': '50rem' }">
-          <ng-template pTemplate="caption"> Header </ng-template>
-          <ng-template pTemplate="header">
-              <tr>
-                  <th>Produto</th>
-                  <th>Embalagem</th>
-              </tr>
-          </ng-template>
-          <ng-template pTemplate="body" let-product>
-            <tr>
-                <td>{{ product.produto }}</td>
-                <td colspan="3">
-                    <table style="width: 100%;">
-                        <tr>
-                            <td *ngFor="let item of product.embalagens" [hidden]="item.sigla == ''" style="border: 1px solid black; text-align: center; display: inline-block; width: 33%;">
-                                {{ item.sigla }}
-                            </td>
-                        </tr>
-                    </table>
-                </td>
-            </tr>
-        </ng-template>
-          <ng-template pTemplate="summary"> Footer </ng-template>
-        </p-table>
-      </div>
-    </div>
-  </div>
-</div> -->
 
