--- a/src/app/receita/receita-search/receita-search.component.scss
+++ b/src/app/receita/receita-search/receita-search.component.scss
@@ -14,27 +14,27 @@ input{
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 60vh; /* Defina a altura conforme necessário */
+  height: 40vh;
 }
 
 .custom-edit {
  border-radius: 5px;
  padding: 3px;
- transition: background-color 0.3s; /* Adiciona uma transição suave */
+ transition: background-color 0.3s; 
 }
 
 .custom-edit:hover {
-  background-color: #F5FF99 /* Cor de fundo ao passar o mouse */
+  background-color: #F5FF99;
 }
 
 .custom-delete {
   border-radius: 3px;
   padding: 3px;
-  transition: background-color 0.3s; /* Adiciona uma transição suave */
+  transition: background-color 0.3s; 
  }
  
  .custom-delete:hover {
-   background-color: #ED737B/* Cor de fundo ao passar o mouse */
+   background-color: #ED737B;
  }
 
  .custom-breadcrumb {
@@ -43,7 +43,7 @@ input{
 }
 
 .custom-page{
-  margin-top: 32rem;
+  margin-top: 30rem;
 }
 
 @media (min-width: 768px) and (max-height: 600px) {
