--- a/src/components/legenda/legenda.component.html
+++ b/src/components/legenda/legenda.component.html
@@ -1,1 +1,6 @@
-<p>legenda works!</p>
+
+<h5><span style="font-weight: bolder;">O - </span><span>Frasco OSD</span></h5>
+<h5><span style="font-weight: bolder;">C - </span><span>Fraco Conta Gotas Tradicional</span></h5>
+<h5><span style="font-weight: bolder;">B - </span><span>Bisnaga</span></h5>
+<p style="font-size: 10px;">*As fórmulas cuja embalagem permite o uso do frasco OSD podem ser produzidas sem conservante, desde que na prescrição seja
+    adicionada esta solicitação</p>
