--- a/src/app/receita/receita-search/receita-search.component.html
+++ b/src/app/receita/receita-search/receita-search.component.html
@@ -1,6 +1,12 @@
 
-<div class="container">
-  <div class="col-12 custom-page" >
+<div class="col-12">
+  <div class="container">
+    <div class="card">
+      <app-legenda></app-legenda>
+    </div>
+  </div>
+  <div class="container">
+      <div class="col-12 custom-page" >
     <p-breadcrumb [model]="items" [home]="home"></p-breadcrumb>
     <div style="float: right; margin-bottom: 10px;margin-top: 10px;" class="flex align-items-center justify-content-between">
       <span class="p-input-icon-left">
@@ -9,6 +15,8 @@
       </span>
   </div>
    <div style="width: 100%;display: flex;justify-content: center;">
+  </div>
+
   <p-table #dt [value]="receitas" [rows]="10" [paginator]="true" 
        [rows]="5" [showCurrentPageReport]="true"  [rowsPerPageOptions]="rowsPage"
       currentPageReportTemplate="Mostrando {first} a {last} de {totalRecords} entradas" [showCurrentPageReport]="true">
@@ -32,11 +40,18 @@
           </tr>
       </ng-template>
       <ng-template pTemplate="summary">
-          <div class="flex align-items-center justify-content-between">
-              <!-- In total there are {{chamados ? chamados.length : 0 }} products. -->
-          </div>
+      
       </ng-template>
   </p-table>
 </div>
 
+<script>
+  const card = document.querySelector('.card');
+
+  window.addEventListener('scroll', function () {
+    // Ajusta a posição do card com base no scroll vertical
+    const scrollY = window.scrollY;
+    card.style.top = `${50 + scrollY * 0.1}%`; // Ajuste o valor 0.1 para controlar a velocidade do movimento
+  });
+</script>
 
